# stream_ml_housing_lab

./: .gitignore  DECISIONS.md  README.md  config.py  notebook_parv_soni.ipynb  project_motivation.md  pyproject.toml  requirements.txt
artifacts/run_20251101_043623_eval/: metadata.json
artifacts/run_20251101_043623_fe/: feature_metadata.json  metadata.json
artifacts/run_20251101_043623_train/: metadata.json
artifacts/run_20251101_043623_train/models/: model.joblib
artifacts/run_20251101_043623_train/transformers/: transformer.joblib
artifacts/run_20251101_043624/: metadata.json
artifacts/run_20251101_043624/transformers/: transformer.joblib
config/: config.yaml
docs/: CONFIG_REFERENCE.md  PIPELINE_OVERVIEW.md
mlruns/948038285919374803/: meta.yaml
mlruns/948038285919374803/15639d5fcda24b70a1693a15af9b7a83/: meta.yaml
mlruns/948038285919374803/4010d0beaa3d4203a207cde2f7154a26/: meta.yaml
mlruns/948038285919374803/a44c29aecbc947b58aad9f79fbbf03bc/: meta.yaml
mlruns/948038285919374803/d0605141dcfd4765a7883a9e4c5825df/: meta.yaml
mlruns/948038285919374803/d6678876f6f241968b30654e5b2d4bbb/: meta.yaml
mlruns/948038285919374803/ea9d50ad2ef542c99ff90c8011d6a9a8/: meta.yaml
src/: __init__.py  config.py  data.py  evaluate.py  feature_engineering.py  inference_service.py  logging_utils.py  mlflow_utils.py  predict.py  registry.py  train.py
src/api/: __init__.py  app.py
src/models/: pipelines.py
src/serving/: __init__.py  app.py  schemas.py
src/streaming/: __init__.py  channel.py  config.py  feature_processor.py  producer.py  reader.py  schemas.py  sinks.py  types.py  worker.py
src/workflows/: __init__.py  offline_train.py  stream_infer.py
tests/: test_config.py  test_evaluate.py  test_feature_engineering.py  test_offline_workflow.py  test_predict.py  test_registry.py  test_streaming.py  test_train.py
utils/: __init__.py  data_loader.py  feature_pipeline.py  metrics.py  model_builder.py  pipeline_loader.py  preprocessing.py  visualization.py
(+87 files in other folders)
