[tool.poetry]
name = "stream-ml-housing-lab"
version = "0.1.0"
description = "Housing price prediction pipeline with MLflow, Keras Tuner, and modular utilities"
authors = ["Hanish Moola <moola.hanish@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }, { include = "utils" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
numpy = ">=1.24.0"
pandas = ">=2.0.0"
matplotlib = ">=3.7.0"
seaborn = ">=0.12.0"
scikit-learn = ">=1.3.0"
tensorflow = ">=2.13.0"
keras-tuner = ">=1.4.0"
mlflow = ">=2.7.0"
fastapi = ">=0.110.0"
uvicorn = {version = ">=0.23.0", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.25.0"
jupyter = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

# Optional uv configuration (uv works directly with pyproject)
[tool.uv]
cache-dir = ".uv-cache"

